# user-agents-python

./: LICENSE.txt  README.md  get_user_agents_data.py  main.py  pyproject.toml
.github/workflows/: download.yml  run_actions.yml  test_schedule.yml
tests/: test_user_agent.py
user_agents/: update_data.py  user_agent.py
